@startuml

	class MetricType {
    	  id : String
    	  description : String
    	  unit : String
    	  script : GroovyScript
    	}

    	enum ValueType {
              BOOLEAN, LONG,
              DOUBLE, STRING;
        	}

	class Metric {
	  id : String
	}



	enum Characteristic {
		ISO 25010
	}

	class Capability {
	  id : String
	  name : String
	  description : String
	  extensions : Map<String, String>
	}

	class Language {
	  id : String
	  name : String
	  description : String
	  extensions : Map<String, String>
	}

	class Group {
	  id : String
	  name : String
	  description : String
	  extensions : Map<String, String>
	}

	class FeatureSet {
	  id : String
	  name : String
	  description : String
	  extensions : Map<String, String>
	}

	class Feature {
	  id : String
	  name : String
	  description : String
	  extensions : Map<String, String>
	}



Capability "1" -down- "*" Characteristic

Feature "*" -right- "1" FeatureSet
FeatureSet "*" -right- "1" Group
Group "*" -right- "1" Language
Language "*" -right- "1" Capability

MetricType "*" -right-> "1" ValueType
Metric "*" -> "1" MetricType

Capability "1" --> "*" Metric
Language "1" --> "*" Metric
Group "1" --> "*" Metric
FeatureSet "1" --> "*" Metric
Feature "1" --> "*" Metric

hide empty members
hide empty methods
hide circle

skinparam monochrome true
skinparam shadowing false
skinparam packageStyle rect
skinparam classBackgroundColor white

@enduml
